using DemoEF_CasUtilisation;

public interface IManipulationPersonneFactory
{
    ManipulationPersonnes Creer();
}